# tinkerboard-gpio

./: .gitignore  LICENSE  README.rst  build.py  pyproject.toml
src/: RKIO.h  c_gpio.h  common.c  common.h  constants.h  cpuinfo.c  cpuinfo.h  event_gpio.h  py_gpio.c  py_pwm.c  py_pwm.h  soft_pwm.c  soft_pwm.h  wiringTB.h
tests/: test_tinkerboard_gpio.py
