[tool.poetry]
name = "tinkerboard-gpio"
version = "0.1.0"
description = ""
authors = ["Kiet To <kwrazi@gmail.com>"]
build = "build.py"
packages = [
    { include = "ASUS" },
    { include = "RPi" },
]

[tool.poetry.dependencies]
python = "^3.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", ]
build-backend = "poetry.core.masonry.api"
